--- a/xc-service-manage-cms/src/main/resources/application.yml
+++ b/xc-service-manage-cms/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     mongodb:
       uri:  mongodb://192.168.233.128:27017
       database: xc_cms
+  freemarker:
+    cache: false
+    settings:
+      template_update_delay: 0
