--- a/testrabbitmqconsumer/pom.xml
+++ b/testrabbitmqconsumer/pom.xml
@@ -14,9 +14,12 @@
 
 <dependencies>
     <dependency>
-        <groupId>com.rabbitmq</groupId>
-        <artifactId>amqp-client</artifactId>
-        <version>4.0.3</version><!--此版本与spring boot 1.5.9版本匹配-->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
