提交关于后台保存静态页面的操作

--- a/xc-service-manage-cms/src/main/resources/application.yml
+++ b/xc-service-manage-cms/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
     mongodb:
       uri:  mongodb://192.168.233.128:27017
       database: xc_cms
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+    virtualHost: /
   freemarker:
     cache: false
     settings:
