上传今天做的功能 feign 远程调用的问题 还出现了一些问题

--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -17,7 +17,9 @@
         <module>../testrabbitmqconsumer</module>
         <module>../testrabbitmqproducer</module>
         <module>../test-freemarker</module>
-
+        <module>../xc-service-base-filesystem</module>
+        <module>../xc-govern-center</module>
+        <module>../xc-govern-center</module>
     </modules>
     <groupId>com.xuecheng</groupId>
     <artifactId>xc-framework-parent</artifactId>
