--- a/xcservicemanagecmsclient/src/main/resources/application.yml
+++ b/xcservicemanagecmsclient/src/main/resources/application.yml
@@ -16,5 +16,6 @@ spring:
 owlQueue:
   mq:
       #cms客户端监控的队列名称（不同的客户端监控的队列不能重复）
-   queue: queue_cms_postpage_01
-   routingKey: 5a751fab6abb5044e0d19ea1 #此routingKey为门户站点ID
+   queue: queue_cms_postpage_03
+   routingKey: 5cf0a6d80ed9652180707810 #此routingKey为门户站点ID
+   # 修改为课程预览站点 id
