上传修改内容

--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -19,7 +19,7 @@
         <module>../test-freemarker</module>
         <module>../xc-service-base-filesystem</module>
         <module>../xc-govern-center</module>
-        <module>../xc-govern-center</module>
+        <module>../xc-service-search</module>
     </modules>
     <groupId>com.xuecheng</groupId>
     <artifactId>xc-framework-parent</artifactId>
